# msrp

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COMPILE  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.rst  configure  configure.ac
debian/: changelog  control  copyright  msrp.install  msrp.manpages  rules  watch
doc/: CMakeLists.txt  THANKS  msrp.1
share/: PKGBUILD
src/: CMakeLists.txt  Makefile.am  Makefile.in  RenameCommand.cc  RenameCommand.h  VCSCommand.cc  VCSCommand.h  autover.h.in  cliargs.cc  cliargs.h  cliopt.cc  cliopt.h  msrp.cc  spcre.cc  spcre.h
test/: CMakeLists.txt  Makefile  all.sh  file.cc.in  file.cc.out  file.cc.sh  first.in  first.out  first.sh  git.mv.sh  git.tracked.sh  nl.sh
